--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,8 @@
 numpy==1.26.4
 pandas==2.2.2
 streamlit
+streamlit-option-menu
 scikit-learn==1.5.1
 matplotlib==3.8.4
 tensorflow==2.17.0
 joblib
-PyWavelets
